--- a/REST.html
+++ b/REST.html
@@ -15,7 +15,8 @@
                 $.ajaxSetup({
                     headers: {
                         'auth-username': username,
-                        'auth-password': password
+                        'auth-password': password,
+                        'auth-persistent': false
                     },
                     crossDomain: true,
                     xhrFields: {
